fixed header size and z-index

--- a/website/css/header.css
+++ b/website/css/header.css
@@ -2,7 +2,8 @@
   position: fixed;
   display: block;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
+  height: 0px;
 }
 .header .top {
     display: block;
@@ -18,13 +19,13 @@
 .header .triangle {
   display: block;
   width: 200px;
+  height: 0px;
   margin: auto;
   transform: translate(0,-10px);
   transition: 0.5s;
 }
 .header .triangle.scrolled {
-  transform: scale(0.75);
-  transform: translate(0,-50px);
+  transform: scale(0.5);
 }
 .header .head-dot {
   width: 100px;
